# litellm-o3-deep-research-rest-examples

./: .env.example  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  README.md  SECURITY.md  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/workflows/: ci.yml  codspeed.yml  pages.yml  release-artifacts.yml
clients/java/: .project  README.md  pom.xml
clients/java/src/main/java/example/litellm/: ApiException.java  EnvConfig.java  LiteLlmClient.java  Main.java
clients/java/src/main/java/example/litellm/relay/: RelayClient.java
clients/java/src/test/java/example/litellm/: EnvConfigTest.java  LiteLlmClientTest.java  MainTest.java  RelayClientTest.java  UrlNormalizationTest.java
clients/python/: README.md  pyproject.toml
clients/python/scripts/: eval_responses_function_calling.py
clients/python/src/litellm_example/: __init__.py  __main__.py  client.py  config.py
clients/python/src/litellm_o3_deep_research_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clients/python/tests/: test_client.py  test_config.py  test_main.py
docs/: index.md
docs/agents/: README.md
docs/coderabbit/: review-commands.md
docs/engineering/: acceptance-criteria.md  harness-engineering.md
docs/ko/: auto-toolcalling.md  faq.md  java-example.md  manual.md  python-example.md  quickstart.md  relay-example.md  relay-toolcalling-plan.md  responses-guide.md
docs/operations/: deploy-runbook.md  package-release-runbook.md
docs/plans/: 2026-03-17-relay-toolcalling-example.md  2026-03-19-auto-toolcalling-design.md  2026-03-19-auto-toolcalling-implementation.md  2026-03-20-relay-error-redaction.md  2026-03-20-responses-auto-toolcalling-design.md  2026-03-20-responses-auto-toolcalling-implementation.md
docs/security/: api-security-checklist.md
docs/stylesheets/: extra.css
docs/workflow/: one-day-delivery-plan.md  pr-continuity.md
ko/auto-toolcalling/: index.html
ko/faq/: index.html
ko/java-example/: index.html
ko/manual/: index.html
ko/python-example/: index.html
ko/quickstart/: index.html
ko/relay-example/: index.html
ko/relay-toolcalling-plan/: index.html
ko/responses-guide/: index.html
operations/deploy-runbook/: index.html
relay/: README.md  pyproject.toml
relay/src/litellm_o3_deep_research_relay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
relay/src/litellm_relay/: __init__.py  __main__.py  app.py  chat_orchestrator.py  config.py  contracts.py  service.py  upstream.py
relay/tests/: test_app.py  test_benchmarks.py  test_chat_orchestrator.py  test_config.py  test_contracts.py  test_lifecycle.py  test_upstream.py
search/: search_index.json
