[project]
name = "litellm-o3-deep-research-relay"
version = "0.1.0"
description = "FastAPI + Hypercorn relay example that wraps the LiteLLM Python SDK"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Seongho Bae", email = "me@seonghobae.me" },
]
dependencies = [
    "fastapi>=0.128,<1",
    "hypercorn>=0.18,<1",
    "litellm>=1.81.13,<2",
    "python-dotenv>=1,<2",
]

[project.urls]
Homepage = "https://github.com/seonghobae/litellm-o3-deep-research-rest-examples"
Documentation = "https://seonghobae.github.io/litellm-o3-deep-research-rest-examples/"
Repository = "https://github.com/seonghobae/litellm-o3-deep-research-rest-examples"

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=5,<7",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest-codspeed>=4.3.0",
]

[project.scripts]
litellm-relay = "litellm_relay.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
